<?xml version="1.0"?>
<?xml-model 
href="http://download.ros.org/schema/package_format3.xsd" 
schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2-nurirobot-driver</name>
  <version>0.1.0</version>
  <description>누리로봇 MC/RSA을 이용한 DD 드라이버</description>
  <maintainer email="ckdo8008@gmail.com">Changu Do</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- Add our own dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nurirobot_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>